trunk/Archive2/ad/95a48ff7519357/output
main.cpp:8:10: error: initializer specified for non-virtual method 'void FXX::channel()'
     void channel() = 0;
          ^
